TEIID-360 TEIID-359 TEIID-357 TEIID-356 TEIID-354 TEIID-353 TEIID-352 TEIID-164 jdbc connector api cleanup.  created canonical push-down function list, changed the SQLTranslator to handle the tasks that were previously in specific SQLConversionVisitors.